Implementacion del Reloj y la config NOTA: error al abrir algunas ventanas

--- a/ProyectoEmail/src/es/abel/dam/view/EmailMainWindow.fxml
+++ b/ProyectoEmail/src/es/abel/dam/view/EmailMainWindow.fxml
@@ -33,14 +33,10 @@
                 <MenuItem fx:id="menuBorrarCorreo" mnemonicParsing="false" onAction="#borrarCorreo" text="Borrar Correo" />
               </items>
             </Menu>
-            <Menu mnemonicParsing="false" text="Tareas">
+            <Menu mnemonicParsing="false" text="Configuracion">
               <items>
-                <MenuItem mnemonicParsing="false" text="Alarmas" />
-              </items>
-            </Menu>
-            <Menu fx:id="menuVentana" mnemonicParsing="false" text="Ventana">
-              <items>
-                <MenuItem fx:id="miTemas" mnemonicParsing="false" onAction="#cambiarTemas" text="Temas" />
+                <MenuItem mnemonicParsing="false" text="Reloj" />
+                  <MenuItem fx:id="miTemas" mnemonicParsing="false" onAction="#cambiarTemas" text="Temas" />
               </items>
             </Menu>
         </menus>
@@ -48,7 +44,7 @@
       <AnchorPane maxWidth="1.7976931348623157E308" prefHeight="1024.0" prefWidth="1024.0">
          <children>
             <ProgressIndicator fx:id="mainProgress" layoutX="7.0" layoutY="8.0" prefHeight="25.0" prefWidth="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <RelojDigital layoutX="538.0" prefHeight="25.0" prefWidth="82.0" text="11:54:33" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0" />
+            <RelojDigital fx:id="reloj" layoutX="538.0" prefHeight="25.0" prefWidth="82.0" text="11:54:33" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0" />
             <SplitPane dividerPositions="0.2508650519031142" prefHeight="416.0" prefWidth="680.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
