--- a/ProyectoEmail/src/es/abel/dam/view/EmailRelojWindow.fxml
+++ b/ProyectoEmail/src/es/abel/dam/view/EmailRelojWindow.fxml
@@ -45,8 +45,8 @@
             <DatePicker fx:id="dpFecha" layoutX="164.0" layoutY="81.0" prefHeight="25.0" prefWidth="180.0" />
             <Label layoutX="164.0" layoutY="49.0" text="Hora" />
             <Label layoutX="269.0" layoutY="49.0" text="Minutos" />
-            <Button fx:id="btnAddTarea" layoutX="529.0" layoutY="137.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Añadir Tarea" />
-            <ComboBox fx:id="formatoHora" layoutX="363.0" layoutY="25.0" prefHeight="25.0" prefWidth="75.0" AnchorPane.leftAnchor="365.0" AnchorPane.topAnchor="25.0" />
+            <Button fx:id="btnAddTarea" layoutX="430.0" layoutY="137.0" mnemonicParsing="false" onAction="#añadirTarea" prefHeight="25.0" prefWidth="91.0" text="Añadir Tarea" AnchorPane.rightAnchor="119.0" />
+            <Button fx:id="btnRemoveTarea" layoutX="529.0" layoutY="137.0" mnemonicParsing="false" onAction="#eliminarTarea" prefHeight="25.0" prefWidth="91.0" text="Eliminar Tarea" AnchorPane.rightAnchor="20.0" />
          </children>
     </AnchorPane>
   </children>
