--- a/ProyectoEmail/ayuda/output/resources/stylesheet.css
+++ b/ProyectoEmail/ayuda/output/resources/stylesheet.css
@@ -12,8 +12,8 @@ iframe.box {
 }
 
 sup.defaultsup {
-  vertical-align: super;
-  font-size: smaller;
+   vertical-align: super;
+   font-size: smaller;
 }
 
 div.mapleft {
@@ -72,6 +72,19 @@ div.middle, div.middleForIDX {
    margin-bottom: 10px;
 }
 
+div.middleWithImage, div.middleForIDXWithImage {
+   float: left;
+   width: 80%;
+   padding: 0 2%;
+   margin: 0;
+   min-width: 400px;
+   margin-bottom: 10px;
+   background-image: url("Background.jpg");
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+
 div.right {
    float: left;
    width: 0%;
@@ -91,10 +104,89 @@ div.top {
    margin-bottom: 10px;
 }
 
+dl > dt {
+   font-weight: normal;
+}
+
+.highlight {
+   background: lightpink;
+}
+
 figcaption {
    font-size: 13px;
    font-style: italic;
 }​
+
+img.lightbox {
+   border-radius: 5px;
+   cursor: pointer;
+   transition: 0.3s;
+}
+
+/* The Modal (background) */
+.modal {
+   display: none;
+   position: fixed;
+   z-index: 1;
+   padding-top: 100px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   overflow: auto;
+   background-color: rgb(0,0,0);
+   background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+   margin: auto;
+   display: block;
+   width: 80%;
+   max-width: 700px;
+}
+
+.modal-close {
+   position: absolute;
+   top: 15px;
+   right: 35px;
+   color: #808080;
+   font-size: 40px;
+   font-weight: bold;
+   transition: 0.3s;
+}
+
+.modal-caption {
+   margin: auto;
+   display: block;
+   width: 80%;
+   max-width: 700px;
+   text-align: center;
+   color: #ccc;
+   padding: 10px 0;
+   height: 150px;
+}
+
+.modal-content, .modal-close {
+   animation-name: zoom;
+   animation-duration: 0.6s;
+}
+
+.modal-close:hover, .modal-close:focus {
+   color: #bbb;
+   text-decoration: none;
+   cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+   .modal-content {
+      width: 100%;
+   }
+}
+
+@keyframes zoom {
+   from {transform:scale(0)}
+   to {transform:scale(1)}
+}
 
 img.center {
    display: block;
@@ -164,24 +256,24 @@ a.glossaryTitleLink {
 }
 
 blockquote {
-  display: block;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 25px;
-  margin-right: 40px;
-  border-left: 5px solid #ccc;
-  padding: 0.5em 10px;
+   display: block;
+   margin-top: 1em;
+   margin-bottom: 1em;
+   margin-left: 25px;
+   margin-right: 40px;
+   border-left: 5px solid #ccc;
+   padding: 0.5em 10px;
 }
 
 blockquote:before {
-  color: #ccc;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-right: 0.2em;
-  vertical-align: -0.4em;
+   color: #ccc;
+   font-size: 4em;
+   line-height: 0.1em;
+   margin-right: 0.2em;
+   vertical-align: -0.4em;
 }
 
-thead {
+thead.notSortable {
    background-color: rgb(239, 239, 239);
 }
 
@@ -208,6 +300,10 @@ table.rightFloat {
    float: right;
 }
 
+table.middle {
+   vertical-align: middle;
+}
+
 table.imageWrappedRight {
    border: none;
    border-collapse: collapse;
@@ -230,10 +326,16 @@ table.imageWrappedCenter {
 }
 
 figcaption.imageWrapped {
-  text-align: center;
+   text-align: center;
 }
 
-table, th, td {
+table.borderNone, th.borderNone, td.borderNone {
+   border: none;
+   border-collapse: collapse;
+   padding: 10px 10px;
+}
+
+table.border, th.border, td.border {
    border: 1px solid black;
    border-collapse: collapse;
    padding: 10px 10px;
@@ -309,9 +411,20 @@ th.rowModifierAPI {
 th.headerAPI {
    font-weight: bold;
    font-family: Monospace;
-   font-size: 14px; 
+   font-size: 14px;
    background-color: rgb(239, 239, 239);
    color: #4A6782;
+   padding-left:5px;
+   padding-right:20px;
+   text-align: left;
+}
+
+th.headerPythonAPI {
+   font-weight: bold;
+   font-family: Monospace;
+   font-size: 14px;
+   background-color: rgb(239, 239, 239);
+   color: #990000;
    padding-left:5px;
    padding-right:20px;
    text-align: left;
@@ -322,6 +435,16 @@ th.rowContentAPI {
    font-family: Monospace;
    font-size: 14px;
    color: #4A6782;
+   padding-left:5px;
+   padding-right:20px;
+   text-align: left;
+}
+
+th.rowContentPythonAPI {
+   font-weight: bold;
+   font-family: Monospace;
+   font-size: 14px;
+   color: #990000;
    padding-left:5px;
    padding-right:20px;
    text-align: left;
@@ -338,11 +461,15 @@ div.rowContentTextAPI {
 
 div.rowContentAPI {
    font-weight: normal;
-   font-family: serif;
+   font-family: serif ;
    color: black;
    padding-left:5px;
    padding-right:20px;
    text-align: left;
+}
+
+tr.rowPythonAPI {
+   background-color: rgb(239, 239, 239);
 }
 
 tr.rowAPI:nth-child(odd) {
@@ -356,18 +483,103 @@ tr.rowAPI:nth-child(even) {
  */
 
 .note {
-   font-size: 9px; /* smaller don't work on a Java HTML JEditorPane */
+   font-size: smaller;
 }
 
 .noteLink {
    text-decoration: none;
-   font-size: 9px; /* smaller don't work on a Java HTML JEditorPane */
+   font-size: smaller;
+   vertical-align: super;
 }
 
 .noteRefLink {
    text-decoration: none;
-   font-size: 9px; /* smaller don't work on a Java HTML JEditorPane */
+   font-size: smaller;
    vertical-align: super;
+}
+
+/* Tooltip container */
+.tooltip {
+   position: relative;
+   display: inline-block;
+   text-decoration: none;
+   vertical-align: super;
+}
+
+sup {
+   vertical-align:text-bottom;
+}
+
+.linktooltip{
+   display: inline;
+   position: relative;
+}
+
+.linktooltip:hover:after{
+   background: #FEFFF0;
+   bottom: -30px;
+   font-size: smaller;
+   border: 1px solid black;
+   color: black;
+   content: attr(meta);
+   left: 20%;
+   padding: 5px 3px;
+   position: absolute;
+   z-index: 98;
+   min-width: 250px;
+   width: auto;
+}
+
+.tooltipbox {
+   border: grey 1px solid;
+   border-radius: 6px;
+   position:absolute;
+   color: black;
+   background-color: whitesmoke;
+   font-size: smaller;
+}
+
+/* Tooltip notes */
+.tooltip .tooltiptext {
+   visibility: hidden;
+   width: 400px;
+   bottom: 100%;
+   left: 50%;
+   background-color: whitesmoke;
+   color: black;
+   text-align: left;
+   padding: 5px 0;
+   border: grey 1px solid;
+   border-radius: 6px;
+   margin-left: 0px;
+   position: absolute;
+   box-shadow: 2px 2px grey;
+   z-index: 1;
+   font-size: smaller;
+   /* Fade in tooltip */
+   opacity: 0;
+   transition: opacity 0.8s;
+}
+
+.tooltip:hover .tooltiptext {
+   visibility: visible;
+   opacity: 1;
+}
+
+.tooltip:hover:after {
+   opacity:1;
+}
+
+.tooltip .tooltiptext::after {
+   content: "";
+   position: absolute;
+   top: 100%;
+   left: 10%;
+   margin-left: -5px;
+   border-width: 5px;
+   border-top: 8px #d1d4d6 solid;
+   border-right: 5px transparent solid;
+   border-left: 5px transparent solid;
 }
 
 .boxed {
@@ -425,6 +637,7 @@ tr.rowAPI:nth-child(even) {
    padding: 0.2em;
    float: right;
    clear: right;
+   font-size: 88%;
    line-height: 1.1em;
 }
 
@@ -450,4 +663,61 @@ tr.rowAPI:nth-child(even) {
    line-height: 140%;
 }
 
-/* no AutoComplete because iyt is performed in Java */
+/* Default Search field */
+.searchField {
+   width: 250px;
+   background-image: url('../resources/search-icon.png');
+   background-position: 10px 5px;
+   padding: 3px 0px 0px 30px;
+   background-repeat: no-repeat;
+}
+
+/* Search field for articles grouped in blobs */
+.searchField2 {
+   width: 250px;
+   background-image: url('../../resources/search-icon.png');
+   background-position: 10px 5px;
+   padding: 3px 0px 0px 30px;
+   background-repeat: no-repeat;
+}
+
+/* JQuery */
+.ui-autocomplete {
+   max-height: 50%;
+   height: 50%;
+   max-width:65%;
+   overflow-y:scroll;
+   overflow-x:scroll;
+   white-space:nowrap;
+   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+* html .ui-autocomplete {
+   float:left;
+   clear:both;
+   width:200px;
+}
+
+.ui-autocomplete-category {
+   font-weight: bold;
+   padding: .2em .4em;
+   margin: .8em 0 .2em;
+   line-height: 1.5;
+}
+
+.ui-autocomplete-highlight {
+   font-weight: bold;
+}
+
+.ui-autocomplete span.hl_results {
+   background-color: #ffff66;
+}
+
+.ui-autocomplete li {
+   font-size: 13px;
+   padding: 3px;
+}
+
+.watermark {
+   color:#888;
+}
